prima parte esercizio week2

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,14 +9,14 @@
 	 min-height: 400px;
 }
 .footer {
-	background-color: orange;
+	background-color: #AfAfAf;
 	margin: 0px auto;
 	padding: 20px 0px 20px 0px;
 }
 .jumbotron {
 	padding: 70px 30px 70px 30px;
 	margin: 0px auto;
-	background-color: orange;
+	background-color: #7986CB;
 }
 
 address {
