--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,3 +43,16 @@ body {
 #corporate {
 	padding: 0px 50px 0px 50px;
 }
+.carousel {
+	background: #512DA8;
+}
+.carousel-item {
+
+height: 300px;
+}
+.carousel-item img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-height: 300px;
+}
